3822B1FI2/3_acc_jacobi_oneapi/khokhlov_andrey/log.txt
/home/crazyproger/sandbox/oneapi-2026/3822B1FI2/3_acc_jacobi_oneapi/khokhlov_andrey/acc_jacobi_oneapi.cpp:51:21: error: use of undeclared identifier 'ok'
   51 |                     ok = false;
      |                     ^
1 error generated.
